# zerosugar

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
tests/core/: CMakeLists.txt  test_core.cpp
tests/core/execution/: CMakeLists.txt  test_async_enumerable.cpp  test_channel.cpp  test_executor_operation.cpp  test_future.cpp  test_strand.cpp
tests/core/network/: test_buffer.cpp
tests/integrate/network/: CMakeLists.txt  client.cpp  client.h  main.cpp  server_event_handler.cpp  server_event_handler.h  test_app.cpp  test_app.h  test_server.cpp  test_server.h
tests/shared/: CMakeLists.txt  test_shared.cpp
tests/shared/behavior_tree/: test_behavior_tree.cpp
tests/shared/execution/: test_async_enumerable.cpp  test_channel.cpp  test_executor_operation.cpp  test_future.cpp  test_strand.cpp
tests/shared/network/: test_buffer.cpp
tests/shared/service/: test_service_locator.cpp
tools/code_generator/: CMakeLists.txt  main.cpp  printer.cpp  printer.h  proto_util.cpp  text_writer.cpp  text_writer.h
tools/code_generator/generator/: behavior_tree_cpp_model_generator.cpp  behavior_tree_cpp_model_generator.h  generator_factory.cpp  generator_factory.h  generator_interface.h
tools/foo/: CMakeLists.txt  test_libprotobuf.cpp
tools/proto_generator/: CMakeLists.txt  constants.h  main.cpp  printer.h  proto_util.h  string_util.cpp  string_util.h  text_writer.h
tools/proto_generator/generator/: behavior_tree_cpp_model_generator.cpp  behavior_tree_cpp_model_generator.h  generator_factory.h
zerosugar/core/: CMakeLists.txt
zerosugar/core/execution/: executor_interface.h
zerosugar/core/execution/channel/: async_enumerable.h  channel.cpp  channel.h  channel_signal.h  channel_status.h
zerosugar/core/execution/executor/: executor.hpp  executor_coroutine_traits.cpp  executor_coroutine_traits.h  executor_interface.h  static_thread_pool.cpp  static_thread_pool.h  strand.cpp  strand.h
zerosugar/core/execution/future/: future.h  future.hpp  future_coroutine_traits.h  future_status.h  promise.cpp  promise.h  shared_context.cpp  shared_context.h
zerosugar/core/execution/impl/: asio_executor.cpp  asio_executor.h
zerosugar/core/network/buffer/: buffer.h  fragment.cpp
zerosugar/core/network/session/: event.h  session.h
zerosugar/shared/: CMakeLists.txt
zerosugar/shared/ai/behavior_tree/: behavior_tree.cpp  behavior_tree.h  black_board.cpp  black_board.h
zerosugar/shared/app/: app.cpp  app.h  app_intance.cpp  app_intance.h  app_log.h
zerosugar/shared/behavior_tree/: behavior_tree.cpp  behavior_tree.h
zerosugar/shared/behavior_tree/task/: decorator.cpp  decorator.h  runnable.h  state.h  task.cpp  task.h  task_factory.cpp  task_factory.h  task_factory_register.h
zerosugar/shared/code_gen/: printer.cpp  printer.h
zerosugar/shared/collision/: intersect.cpp  intersect.h
zerosugar/shared/collision/shape/: arc.cpp  arc.h  circle.cpp  circle.h  obb.cpp  obb.h  sector.cpp  sector.h
zerosugar/shared/database/: database_error.cpp  database_error.h
zerosugar/shared/database/connection/: connection_pool.cpp  connection_pool.h  connection_pool_option.cpp  connection_pool_option.h
zerosugar/shared/execution/channel/: async_enumerable.h  channel.cpp  channel.h  channel_signal.h  channel_status.h
zerosugar/shared/execution/context/: cancelable_interface.h  execution_context.cpp  execution_context.h
zerosugar/shared/execution/executor/: executor.hpp  executor_coroutine_traits.cpp  executor_coroutine_traits.h  executor_interface.h  static_thread_pool.cpp  static_thread_pool.h  strand.cpp  strand.h
zerosugar/shared/execution/future/: future.h  future.hpp  future_coroutine_traits.cpp  future_coroutine_traits.h  future_status.h  promise.cpp  promise.h  shared_context.cpp  (+1 more)
zerosugar/shared/io/: stream_reader.h  stream_writer.h
zerosugar/shared/log/: CMakeLists.txt  log_level.h  log_service.cpp  log_service.h  log_service_interface.h  logger_interface.h
zerosugar/shared/navigation/: navi_query.cpp  navi_query.h  navi_vector.cpp  navi_vector.h
zerosugar/shared/network/: io_error.cpp  io_error.h  socket.cpp  socket.h
zerosugar/shared/process/: execute_command.cpp  execute_command.h  query_sys_info.cpp  query_sys_info.h
zerosugar/shared/service/: service_interface.h  service_locator.cpp  service_locator.h  service_locator_log.h
zerosugar/shared/snowflake/: snowflake.cpp  snowflake.h
zerosugar/shared/state_machine/: state_machine.h
zerosugar/shared/type/: borrowed.h  concept.h  enum_class.h  not_null_pointer.cpp  not_null_pointer.h  runtime_type_id.cpp  runtime_type_id.h  value_type.h
zerosugar/sl/database/: CMakeLists.txt
zerosugar/sl/gamedata/: CMakeLists.txt
zerosugar/sl/pch/: CMakeLists.txt
zerosugar/sl/protocol/: CMakeLists.txt
zerosugar/sl/server/: CMakeLists.txt
zerosugar/sl/service/: CMakeLists.txt
zerosugar/tool/proto_code_generator/: CMakeLists.txt  main.cpp  printer.h  proto_code_generator.cpp  proto_code_generator.h  proto_code_generator_option.cpp  proto_code_generator_option.h
zerosugar/xr/application/: CMakeLists.txt
zerosugar/xr/data/: CMakeLists.txt  behavior_tree_xml_provider.cpp  behavior_tree_xml_provider.h  game_data_constant.cpp  game_data_constant.h  game_data_id_type.h  game_data_provider.cpp  game_data_provider.h  navigation_data_provider.cpp  navigation_data_provider.h
zerosugar/xr/navigation/: CMakeLists.txt  navi_data.cpp  navi_data.h  navi_data_provider.cpp  navi_data_provider.h  navi_query.cpp  navi_query.h  navi_vector.cpp  navi_vector.h  navi_visualize_param.cpp  navi_visualize_param.h  navi_visualizer.cpp  navi_visualizer.h  navi_visualizer_interface.h  navigation_service.cpp  navigation_service.h
zerosugar/xr/network/: CMakeLists.txt  packet.cpp  packet.h  packet_builder.cpp  packet_builder.h  packet_interface.h  packet_reader.cpp  packet_reader.h  packet_writer.cpp  packet_writer.h  rpc_client.cpp  rpc_client.h  rpc_packet_builder.h  rpc_server.cpp  service_client.cpp  service_client.h  service_packet_builder.cpp  service_packet_builder.h  service_server.cpp  service_server.h
(+1025 files in other folders)
